cppcheck_report.txt
BKT/BAI60722/BAI60722.cpp:20:13: error: When i==n.size(), n[i] is out of bounds. [stlOutOfBounds]
    cs=int(n[i])-48;
            ^
BKT/ROBOT/ROBOT.cpp:12:9: error: syntax error [syntaxError]
        if()
        ^
BTVN/BEST/BEST.cpp:10:20: error: Uninitialized variable: a [uninitvar]
    for(int i=1;i<=a;i++)
                   ^
BTVN/BEST/BEST.cpp:15:14: error: Uninitialized variable: a [uninitvar]
    sort(A,A+a+1);
             ^
BTVN/BEST/BEST.cpp:14:20: error: Uninitialized variable: b [uninitvar]
    for(int i=1;i<=b;i++)cin>>B[i];
                   ^
BTVN/BEST/BEST.cpp:17:10: error: Uninitialized variable: b [uninitvar]
    if(a>b)ll n=a;
         ^
BTVN/BEST/BEST.cpp:16:14: error: Uninitialized variable: a [uninitvar]
    sort(B,B+a+1);
             ^
BTVN/BEST/BEST.cpp:17:8: error: Uninitialized variable: a [uninitvar]
    if(a>b)ll n=a;
       ^
BTVN/BEST/BEST.cpp:18:15: error: Uninitialized variable: b [uninitvar]
    else ll n=b;
              ^
BTVN/CPHONE/CPHONE.cpp:19:10: error: Array 'TS[100001]' accessed at index 100001, which is out of bounds. [arrayIndexOutOfBounds]
    if(TS[i]>maxx)
         ^
BTVN/CPHONE/CPHONE.cpp:23:20: error: Array 'TS[100001]' accessed at index 100001, which is out of bounds. [arrayIndexOutOfBounds]
        if(maxx==TS[i])
                   ^
BTVN/DIGITS/DIGITS.cpp:0:0: error: Internal Error. MathLib::toULongNumber: out_of_range: 168888888888888888889 (stoull) [cppcheckError]

^
BTVN/DIGITS/DIGITS.cpp:0:0: note: Internal Error. MathLib::toULongNumber: out_of_range: 168888888888888888889 (stoull)

^
BTVN/DIGITS/DIGITS.cpp:0:0: note: Internal Error. MathLib::toULongNumber: out_of_range: 168888888888888888889 (stoull)

^
BTVN/MIN4/MIN4.cpp:11:29: error: Array 'A[4]' accessed at index 4, which is out of bounds. [arrayIndexOutOfBounds]
    cin>>A[1]>>A[2]>>A[3]>>A[4];
                            ^
BTVN/MISTAKE/MISTAKE.cpp:14:14: error: When i==a.size(), a[i] is out of bounds. [stlOutOfBounds]
        if (a[i] == '6') a[i] = '5';
             ^
BTVN/MISTAKE/MISTAKE.cpp:18:14: error: When i==b.size(), b[i] is out of bounds. [stlOutOfBounds]
        if (b[i] == '6') b[i] = '5';
             ^
BTVN/MISTAKE/MISTAKE.cpp:27:14: error: When i==a.size(), a[i] is out of bounds. [stlOutOfBounds]
        if (a[i] == '5') a[i] = '6';
             ^
BTVN/MISTAKE/MISTAKE.cpp:31:14: error: When i==b.size(), b[i] is out of bounds. [stlOutOfBounds]
        if (b[i] == '5') b[i] = '6';
             ^
BTVN/MORPHER/MORPHER.cpp:14:14: error: Uninitialized variable: r [uninitvar]
        cin>>r>>
             ^
Codefun.vn/P062/P062.cpp:18:4: error: Unmatched '}'. Configuration: ''. [syntaxError]
   }
   ^
Codefun.vn/P064/P064.cpp:7:11: error: Uninitialized variable: n [uninitvar]
    while(n>0)
          ^
Codefun.vn/P064/P064.cpp:9:11: error: Uninitialized variable: n [uninitvar]
        n=n/10;
          ^
Codefun.vn/P074/P074.cpp:13:11: error: Uninitialized variable: n [uninitvar]
for(int i=n;i>0;i--)
          ^
Codefun.vn/P084/P084.cpp:4:1: error: Unmatched '{'. Configuration: ''. [syntaxError]
{
^
Codefun.vn/P086/P086.cpp:16:9: error: syntax error [syntaxError]
        if
        ^
Codefun.vn/P102/P102.cpp:6:29: error: Array 'A[4]' accessed at index 4, which is out of bounds. [arrayIndexOutOfBounds]
    cin>>A[1]>>A[2]>>A[3]>>A[4];
                            ^
Codefun.vn/P123/P123.cpp:6:23: error: Array 'A[3]' accessed at index 3, which is out of bounds. [arrayIndexOutOfBounds]
    cin>>A[1]>>A[2]>>A[3];
                      ^
Codefun.vn/P123/P123.cpp:8:23: error: Array 'A[3]' accessed at index 3, which is out of bounds. [arrayIndexOutOfBounds]
    cout<<A[1]<<' '<<A[3];
                      ^
Colinh/Codev2/CAU8.cpp:19:8: error: Out of bounds access of s, index 's.size()' is out of bounds. [containerOutOfBoundsIndexExpression]
    if(s[s.size()]==' ')s.erase(s.size());
       ^
Colinh/XAU/XAU17/XAU17.cpp:19:13: error: Array 'm[25]' accessed at index 25, which is out of bounds. [arrayIndexOutOfBounds]
        if(m[i]>0)
            ^
Colinh/XAU/XAU19/XAU19.cpp:18:8: error: Out of bounds access of s, index 's.size()' is out of bounds. [containerOutOfBoundsIndexExpression]
    if(s[s.size()]== ' ')
       ^
Colinh/XAU/XAU30/XAU30.cpp:38:11: error: Out of bounds access in expression 's1[i]' because 's1' is empty. [containerOutOfBounds]
        s1[i] = nhanNho(a[i],b);
          ^
Colinh/XAU/XAU30/XAU30.cpp:39:11: error: Out of bounds access in expression 's1[i]' because 's1' is empty. [containerOutOfBounds]
        s1[i].insert(s1.length(),l-i-1,'0');
          ^
Colinh/bai2/bai2.cpp:16:10: error: Array 'C[21][21]' accessed at index C[21][0], which is out of bounds. [arrayIndexOutOfBounds]
        C[i][0]=C[i][i]=1;
         ^
Colinh/bai2/bai2.cpp:16:18: error: Array 'C[21][21]' accessed at index C[21][21], which is out of bounds. [arrayIndexOutOfBounds]
        C[i][0]=C[i][i]=1;
                 ^
Colinh/code/BAI10/BAI10.cpp:16:49: error: syntax error: +] [syntaxError]
        if(A[i]<A[i+1]||(A[i-1]>A[i] && A[i]<A[i+]))
                                                ^
Colinh/code/BAI9/BAI9.cpp:15:49: error: syntax error: +] [syntaxError]
        if(A[i]<A[i+1]||(A[i-1]>A[i] && A[i]<A[i+]))
                                                ^
Thaytuong/MUSHROOM/t1.cpp:7:1: error: Unmatched '{'. Configuration: ''. [syntaxError]
{
^
Contest/Anagram.cpp:1:1: error: The one definition rule is violated, different classes/structs have the same name 'Solution' [ctuOneDefinitionRuleViolation]
class Solution {
^
Contest/Binarysearch.cpp:1:1: note: The one definition rule is violated, different classes/structs have the same name 'Solution'
class Solution {
^
Contest/Anagram.cpp:1:1: note: The one definition rule is violated, different classes/structs have the same name 'Solution'
class Solution {
^
Contest/Anagram.cpp:1:1: error: The one definition rule is violated, different classes/structs have the same name 'Solution' [ctuOneDefinitionRuleViolation]
class Solution {
^
Contest/COPHIEU.cpp:1:1: note: The one definition rule is violated, different classes/structs have the same name 'Solution'
class Solution {
^
Contest/Anagram.cpp:1:1: note: The one definition rule is violated, different classes/structs have the same name 'Solution'
class Solution {
^
Contest/Anagram.cpp:1:1: error: The one definition rule is violated, different classes/structs have the same name 'Solution' [ctuOneDefinitionRuleViolation]
class Solution {
^
Contest/LowestCommonAncestorofaBinarySearchTree.cpp:1:1: note: The one definition rule is violated, different classes/structs have the same name 'Solution'
class Solution {
^
Contest/Anagram.cpp:1:1: note: The one definition rule is violated, different classes/structs have the same name 'Solution'
class Solution {
^
Contest/Anagram.cpp:1:1: error: The one definition rule is violated, different classes/structs have the same name 'Solution' [ctuOneDefinitionRuleViolation]
class Solution {
^
Contest/MaximumSubarray.cpp:1:1: note: The one definition rule is violated, different classes/structs have the same name 'Solution'
class Solution {
^
Contest/Anagram.cpp:1:1: note: The one definition rule is violated, different classes/structs have the same name 'Solution'
class Solution {
^
Contest/Anagram.cpp:1:1: error: The one definition rule is violated, different classes/structs have the same name 'Solution' [ctuOneDefinitionRuleViolation]
class Solution {
^
Contest/Ransomnote.cpp:1:1: note: The one definition rule is violated, different classes/structs have the same name 'Solution'
class Solution {
^
Contest/Anagram.cpp:1:1: note: The one definition rule is violated, different classes/structs have the same name 'Solution'
class Solution {
^
Contest/Anagram.cpp:1:1: error: The one definition rule is violated, different classes/structs have the same name 'Solution' [ctuOneDefinitionRuleViolation]
class Solution {
^
Contest/palinrome.cpp:1:1: note: The one definition rule is violated, different classes/structs have the same name 'Solution'
class Solution {
^
Contest/Anagram.cpp:1:1: note: The one definition rule is violated, different classes/structs have the same name 'Solution'
class Solution {
^
nofile:0:0: information: Too many #ifdef configurations - cppcheck only checks 12 configurations. Use --force to check all configurations. For more details, use --enable=information. [toomanyconfigs]

nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingIncludeSystem]

